--- a/app/Food-Identifier/src/App.css
+++ b/app/Food-Identifier/src/App.css
@@ -5,35 +5,62 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: rgb(46, 46, 46);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  position: fixed;
+  color: rgb(219, 216, 216);
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  background-color: rgb(54, 54, 54);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.upload{
+  color: white;
+  margin: auto;
 }
 
-.upload-btn {
-  padding: 2em;
+.nutrition-label {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  position: absolute;
+  width: 200px;
+  left: 0;
+  bottom: 0;
+  background-color: rgb(46, 46, 46);
 }
+
+.nutrition-label h1 {
+  font-size: 16px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.nutrition-label table {
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+.nutrition-label td {
+  border: 1px solid #ccc;
+  padding: 2px;
+}
+
+.nutrition-label .bottom-row td {
+  border-bottom-width: 2px;
+}
+
+.nutrition-label .footer {
+  font-size: 10px;
+  text-align: center;
+}
+
 
